deploy: pawanrajs/pawanrajs.com@a982a3b6f73cfb10d46ba3a1d488e75d4a0b5ad3

--- a/archives3.html
+++ b/archives3.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/the-power-of-stories">
+                                <h3>The Power of Stories...</h3>
+                            </a>
+                        </header>
+                        <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you">
                                 <h3>I Want to Talk to You...</h3>
                             </a>
@@ -144,15 +153,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov">
-                                <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
-                            </a>
-                        </header>
-                        <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …</p>
                     </section>
  
 <div class="row">
@@ -244,19 +244,19 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -289,12 +289,6 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/pelican">
-            pelican
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/personal">
             personal
@@ -322,7 +316,13 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/spring-cleaning">
+            spring cleaning
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
