--- a/archives4.html
+++ b/archives4.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov">
+                                <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
+                            </a>
+                        </header>
+                        <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/reasonable">
                                 <h3>Reasonable...</h3>
                             </a>
@@ -235,19 +244,19 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -280,12 +289,6 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/pelican">
-            pelican
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/personal">
             personal
@@ -313,7 +316,13 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/spring-cleaning">
+            spring cleaning
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
