--- a/index2.html
+++ b/index2.html
@@ -149,6 +149,23 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
+                        <a href="https://pawanrajs.com/posts/oooh-shiny" rel='bookmark'>
+                            <h3>Oooh Shiny!</h3>
+                        </a>
+                    </header>
+                    <p>"Hello again." "Hello to you, too!" "What's on your mind today?" "On my mind? Nothing. That's kinda the weird thing - I think I am losing my ability to think." "You</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/oooh-shiny" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
+                    <span class="icon solid featured fa-comments"></span>
+                    <header>
                         <a href="https://pawanrajs.com/posts/so-it-begins" rel='bookmark'>
                             <h3>So it begins...</h3>
                         </a>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/not-today" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-smile"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/growing-up" rel='bookmark'>
-                            <h3>Growing up.</h3>
-                        </a>
-                    </header>
-                    <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so th</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/growing-up" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
