--- a/index6.html
+++ b/index6.html
@@ -147,6 +147,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-book"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" rel='bookmark'>
+                            <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
+                        </a>
+                    </header>
+                    <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/reasonable" rel='bookmark'>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/love-because" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-pencil-alt"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/being-ok" rel='bookmark'>
-                            <h3>Being OK</h3>
-                        </a>
-                    </header>
-                    <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/being-ok" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
