--- a/tags.html
+++ b/tags.html
@@ -137,19 +137,19 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -182,12 +182,6 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/pelican">
-            pelican
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/personal">
             personal
@@ -215,7 +209,13 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/spring-cleaning">
+            spring cleaning
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -239,6 +239,24 @@ Pawanraj Sadhwani                </a>
 <section class="wrapper style1 container special">
     <h3>Recent Posts</h3>
     <div class="row">
+        <div class="col-4 col-12-narrower">
+
+            <section>
+                <span class="icon solid featured fa-broom"></span>
+                <header>
+                    <a href="https://pawanrajs.com/posts/spring-cleaning" rel='bookmark'>
+                        <h3>Spring Cleaning</h3>
+                    </a>
+                </header>
+                <p>"It's been a while..." "Too many of our conversations begin that way." "I am aware." "So, what have you been up to?" "Oh, this and that." "That's... forthcomi</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="https://pawanrajs.com/posts/spring-cleaning" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
         <div class="col-4 col-12-narrower">
 
             <section>
@@ -270,24 +288,6 @@ Pawanraj Sadhwani                </a>
                 <footer>
                     <ul class="buttons">
                         <li><a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-        <div class="col-4 col-12-narrower">
-
-            <section>
-                <span class="icon solid featured fa-comments"></span>
-                <header>
-                    <a href="https://pawanrajs.com/posts/oooh-shiny" rel='bookmark'>
-                        <h3>Oooh Shiny!</h3>
-                    </a>
-                </header>
-                <p>"Hello again." "Hello to you, too!" "What's on your mind today?" "On my mind? Nothing. That's kinda the weird thing - I think I am losing my ability to think." "You</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="https://pawanrajs.com/posts/oooh-shiny" class="button small">Read More</a></li>
                     </ul>
                 </footer>
             </section>
