--- a/archives.html
+++ b/archives.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/spring-cleaning">
+                                <h3>Spring Cleaning</h3>
+                            </a>
+                        </header>
+                        <p>In which I clean. Everything!</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/cloud-application-security-best-practices">
                                 <h3>Cloud Application Security Best Practices</h3>
                             </a>
@@ -144,15 +153,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>I think I am slowly going crazy!</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/not-today">
-                                <h3>Not Today</h3>
-                            </a>
-                        </header>
-                        <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
                     </section>
  
 <div class="row">
@@ -243,19 +243,19 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -288,12 +288,6 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/pelican">
-            pelican
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/personal">
             personal
@@ -321,7 +315,13 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/spring-cleaning">
+            spring cleaning
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
