--- a/archives2.html
+++ b/archives2.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/not-today">
+                                <h3>Not Today</h3>
+                            </a>
+                        </header>
+                        <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/growing-up">
                                 <h3>Growing up.</h3>
                             </a>
@@ -144,15 +153,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/the-power-of-stories">
-                                <h3>The Power of Stories...</h3>
-                            </a>
-                        </header>
-                        <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …</p>
                     </section>
  
 <div class="row">
@@ -244,19 +244,19 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -289,12 +289,6 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(3)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/pelican">
-            pelican
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/personal">
             personal
@@ -322,7 +316,13 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/spring-cleaning">
+            spring cleaning
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
