--- a/index3.html
+++ b/index3.html
@@ -149,6 +149,23 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
+                        <a href="https://pawanrajs.com/posts/growing-up" rel='bookmark'>
+                            <h3>Growing up.</h3>
+                        </a>
+                    </header>
+                    <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so th</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/growing-up" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
+                    <span class="icon solid featured fa-smile"></span>
+                    <header>
                         <a href="https://pawanrajs.com/posts/we-all-need-the-eggs" rel='bookmark'>
                             <h3>We all Need the Eggs...</h3>
                         </a>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/the-facebook-experiment" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-thumbs-up"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/to-like-or-not-to-like" rel='bookmark'>
-                            <h3>To Like or Not to Like...</h3>
-                        </a>
-                    </header>
-                    <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff g</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/to-like-or-not-to-like" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
