--- a/index4.html
+++ b/index4.html
@@ -147,6 +147,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-thumbs-up"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/to-like-or-not-to-like" rel='bookmark'>
+                            <h3>To Like or Not to Like...</h3>
+                        </a>
+                    </header>
+                    <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff g</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/to-like-or-not-to-like" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/the-power-of-stories" rel='bookmark'>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-book"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" rel='bookmark'>
-                            <h3>Book Review: The Source by James A. Michener</h3>
-                        </a>
-                    </header>
-                    <p><a href="http://www.goodreads.com/book/s</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
