deploy: pawanrajs/pawanrajs.com@d224d995178e155ec16acc167429cc8289bfb6ac

--- a/archives.html
+++ b/archives.html
@@ -139,20 +139,20 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/happy-new-year">
+                                <h3>Happy New Year?</h3>
+                            </a>
+                        </header>
+                        <p>New year, new me!</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/oooh-shiny">
                                 <h3>Oooh Shiny!</h3>
                             </a>
                         </header>
                         <p>I think we might be on to something here. But first, I must play the next move on my chess game, but before that let me finish the bo- oooh shiny!</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/so-it-begins">
-                                <h3>So it begins...</h3>
-                            </a>
-                        </header>
-                        <p>I think I am slowly going crazy!</p>
                     </section>
  
 <div class="row">
@@ -166,7 +166,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 1 / 4</header>
+            <header>Page 1 / 5</header>
         </section>
     </div>
 
@@ -240,22 +240,22 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -312,10 +312,10 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
