--- a/archives2.html
+++ b/archives2.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/so-it-begins">
+                                <h3>So it begins...</h3>
+                            </a>
+                        </header>
+                        <p>I think I am slowly going crazy!</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/not-today">
                                 <h3>Not Today</h3>
                             </a>
@@ -145,15 +154,6 @@ Pawanraj Sadhwani                </a>
                         </header>
                         <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …</p>
                     </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/to-like-or-not-to-like">
-                                <h3>To Like or Not to Like...</h3>
-                            </a>
-                        </header>
-                        <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …</p>
-                    </section>
  
 <div class="row">
 
@@ -167,7 +167,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 2 / 4</header>
+            <header>Page 2 / 5</header>
         </section>
     </div>
 
@@ -241,22 +241,22 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -313,10 +313,10 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
