--- a/archives4.html
+++ b/archives4.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/this-way-and-that">
+                                <h3>This way and That...</h3>
+                            </a>
+                        </header>
+                        <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov">
                                 <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
                             </a>
@@ -145,15 +154,6 @@ Pawanraj Sadhwani                </a>
                         </header>
                         <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
                     </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/jump">
-                                <h3>Jump!</h3>
-                            </a>
-                        </header>
-                        <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea of a trip to Mandvi beach was therefore exciting (as all trips to …</p>
-                    </section>
  
 <div class="row">
 
@@ -167,14 +167,14 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 4 / 4</header>
+            <header>Page 4 / 5</header>
         </section>
     </div>
 
     <div class="col-4  pagination pagination-right">
         <section>
             <header>
-            </header>
+                <a href="https://pawanrajs.com/archives5.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -241,22 +241,22 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -313,10 +313,10 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
