--- a/archives5.html
+++ b/archives5.html
@@ -33,10 +33,10 @@
 
 
     <title>
-life | Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
+Archives | Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
 </head>
 
-<body class="no-sidebar is-preload">
+<body class="right-sidebar is-preload">
     <div id="page-wrapper">
 
         <!-- Header -->
@@ -97,8 +97,8 @@ Pawanraj Sadhwani                </a>
 <article id="main">
 
     <header class="special container">
-        <span class="icon solid fa-tag"></span>
-        <h2><i class="fa fa-tag" aria-hidden="true"></i>life</h2>
+        <span class="icon solid fa-archive"></span>
+        <h2>Archives</h2>
         <!-- add page sub title here -->
     </header>
 
@@ -112,21 +112,39 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="https://pawanrajs.com/posts/being-ok">
-                                <h3>Being OK</h3>
-                            </a>
-                        </header>
-                        <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
                             <a href="https://pawanrajs.com/posts/jump">
                                 <h3>Jump!</h3>
                             </a>
                         </header>
                         <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea of a trip to Mandvi beach was therefore exciting (as all trips to …</p>
                     </section>
+ 
+<div class="row">
+
+    <div class="col-4 pagination pagination-left">
+        <section>
+            <header>
+                     <a href="https://pawanrajs.com/archives4.html#latest_posts">
+                &larr;&nbsp;Newer posts</a>             </header>
+        </section>
+    </div>
+
+    <div class="col-4  pagination pagination-middle">
+        <section>
+            <header>Page 5 / 5</header>
+        </section>
+    </div>
+
+    <div class="col-4  pagination pagination-right">
+        <section>
+            <header>
+            </header>
+        </section>
+    </div>
+
+</div>
+
+
                 </div>
             </div>
 
@@ -135,6 +153,29 @@ Pawanraj Sadhwani                </a>
 
                 <!-- Sidebar -->
                 <div class="sidebar">
+
+                    <!-- To add search section or not -->
+<section>
+    <header>
+        <h3>Search</h3>
+    </header>
+    <span>
+        <form action="https://pawanrajs.com/search">
+            <div class="tipue_search_group">
+                <div class="row gtr-0 aln-middle aln-left">
+                    <div class="col-9 col-8-mobile">
+                        <input type="text" class="search-query" id="tipue_search_input" placeholder="Search" name="q" required onsubmit="return validateForm(this.elements['q'].value);">
+                    </div>
+                    <div class="col-3 col-4-mobile">
+                        <button type="submit" class="button fit primary search-button">
+                            <div class="tipue_search_icon">&#9906;</div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </span>
+</section>
 <section>
     <header>
         <h3>All Tags</h3>
@@ -273,98 +314,13 @@ Pawanraj Sadhwani                </a>
         <li><a href="https://pawanrajs.com/category/technology">Technology</a></li>
     </ul>
 </section>                </div>
+
             </div>
 
         </div>
-
-<div class="row">
-
-    <div class="col-4 pagination pagination-left">
-        <section>
-            <header>
-                     <a href="https://pawanrajs.com/tag/life.html#latest_posts">
-                &larr;&nbsp;Newer posts</a>             </header>
-        </section>
-    </div>
-
-    <div class="col-4  pagination pagination-middle">
-        <section>
-            <header>Page 2 / 2</header>
-        </section>
-    </div>
-
-    <div class="col-4  pagination pagination-right">
-        <section>
-            <header>
-            </header>
-        </section>
-    </div>
-
-</div>
-
     </section>
-
-    <!-- Two -->
-<section class="wrapper style1 container special">
-    <h3>Recent Posts</h3>
-    <div class="row">
-        <div class="col-4 col-12-narrower">
-
-            <section>
-                <span class="icon solid featured fa-pencil-alt"></span>
-                <header>
-                    <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel='bookmark'>
-                        <h3>I Want to Talk to You...</h3>
-                    </a>
-                </header>
-                <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-        <div class="col-4 col-12-narrower">
-
-            <section>
-                <span class="icon solid featured fa-pencil-alt"></span>
-                <header>
-                    <a href="https://pawanrajs.com/posts/nuclear-power" rel='bookmark'>
-                        <h3>Nuclear Power</h3>
-                    </a>
-                </header>
-                <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="https://pawanrajs.com/posts/nuclear-power" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-        <div class="col-4 col-12-narrower">
-
-            <section>
-                <span class="icon solid featured fa-arrows-alt-h"></span>
-                <header>
-                    <a href="https://pawanrajs.com/posts/this-way-and-that" rel='bookmark'>
-                        <h3>This way and That...</h3>
-                    </a>
-                </header>
-                <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="https://pawanrajs.com/posts/this-way-and-that" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-    </div>
-</section>
 </article>
+
 <!-- CTA -->
 <section id="cta">
 
