--- a/index4.html
+++ b/index4.html
@@ -149,6 +149,23 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-thumbs-up"></span>
                     <header>
+                        <a href="https://pawanrajs.com/posts/the-facebook-experiment" rel='bookmark'>
+                            <h3>The Facebook Experiment</h3>
+                        </a>
+                    </header>
+                    <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/the-facebook-experiment" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
+                    <span class="icon solid featured fa-thumbs-up"></span>
+                    <header>
                         <a href="https://pawanrajs.com/posts/to-like-or-not-to-like" rel='bookmark'>
                             <h3>To Like or Not to Like...</h3>
                         </a>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/the-power-of-stories" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-pencil-alt"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel='bookmark'>
-                            <h3>I Want to Talk to You...</h3>
-                        </a>
-                    </header>
-                    <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
