--- a/archives3.html
+++ b/archives3.html
@@ -112,6 +112,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/to-like-or-not-to-like">
+                                <h3>To Like or Not to Like...</h3>
+                            </a>
+                        </header>
+                        <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/the-power-of-stories">
                                 <h3>The Power of Stories...</h3>
                             </a>
@@ -145,15 +154,6 @@ Pawanraj Sadhwani                </a>
                         </header>
                         <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …</p>
                     </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/this-way-and-that">
-                                <h3>This way and That...</h3>
-                            </a>
-                        </header>
-                        <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …</p>
-                    </section>
  
 <div class="row">
 
@@ -167,7 +167,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 3 / 4</header>
+            <header>Page 3 / 5</header>
         </section>
     </div>
 
@@ -241,22 +241,22 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations">
             conversations
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/diary">
             diary
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -313,10 +313,10 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(1)</span>
             </a>
     </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/self">
             self
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
