--- a/index2.html
+++ b/index2.html
@@ -149,6 +149,23 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
+                        <a href="https://pawanrajs.com/posts/happy-new-year" rel='bookmark'>
+                            <h3>Happy New Year?</h3>
+                        </a>
+                    </header>
+                    <p>"Happy New Year!" "It's been a while." "You're supposed to say Happy New Year to you too. But yes." "Happy New Year. But also, what kept you busy?" "Well, you alrea</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/happy-new-year" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
+                    <span class="icon solid featured fa-comments"></span>
+                    <header>
                         <a href="https://pawanrajs.com/posts/oooh-shiny" rel='bookmark'>
                             <h3>Oooh Shiny!</h3>
                         </a>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/so-it-begins" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-frown"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/not-today" rel='bookmark'>
-                            <h3>Not Today</h3>
-                        </a>
-                    </header>
-                    <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/not-today" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
