--- a/index5.html
+++ b/index5.html
@@ -147,6 +147,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-pencil-alt"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel='bookmark'>
+                            <h3>I Want to Talk to You...</h3>
+                        </a>
+                    </header>
+                    <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" rel='bookmark'>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/nuclear-power" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-arrows-alt-h"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/this-way-and-that" rel='bookmark'>
-                            <h3>This way and That...</h3>
-                        </a>
-                    </header>
-                    <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/this-way-and-that" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
