--- a/index6.html
+++ b/index6.html
@@ -147,6 +147,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-arrows-alt-h"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/this-way-and-that" rel='bookmark'>
+                            <h3>This way and That...</h3>
+                        </a>
+                    </header>
+                    <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/this-way-and-that" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" rel='bookmark'>
@@ -174,23 +191,6 @@ Pawanraj Sadhwani                </a>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/reasonable" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-heart"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/love-because" rel='bookmark'>
-                            <h3>Because</h3>
-                        </a>
-                    </header>
-                    <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/love-because" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
