--- a/index7.html
+++ b/index7.html
@@ -147,6 +147,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-heart"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/love-because" rel='bookmark'>
+                            <h3>Because</h3>
+                        </a>
+                    </header>
+                    <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/love-because" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/being-ok" rel='bookmark'>
